# Dinah

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  gulpfile.js  manage.py  package.json  pyproject.toml  pytest.ini
.vim/: coc-settings.json
dinah/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
dinah/blog/: admin.py  models.py  views.py
dinah/blog/migrations/: 0001_initial.py  0002_auto_20200406_2127.py
dinah/config/: urls.py
dinah/config/settings/: base.py  production.py  test.py
dinah/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
dinah/settings/: base.py  dev.py
dinah/templates/: base.html
dinah/users/: admin.py  apps.py  urls.py
dinah/users/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
dinah/utils/: shortcuts.py
docs/: dev-tutor.md
misc/docker/: local.yml  production.yml
misc/docs/: README.rst  conf.py
misc/requirements/: local.txt
old.bak/: wsgi.py
old.bak/compose/production/django/: Dockerfile
old.bak/compose/production/traefik/: traefik.yml
old.bak/config/: urls.py  wsgi.py
old.bak/dinah/settings/: base.py  local.py
old.bak/dinah/templates/account/: password_reset_from_key.html
old.bak/misc/docker/: production.yml
old.bak/misc/docs/: README.rst  index.rst
old.bak/misc/docs/pycharm/: configuration.rst
old.bak/users/: admin.py  apps.py  urls.py
tests/: conftest.py
tests/users/: test_forms.py  test_models.py  test_urls.py  test_views.py
