[tool.poetry]
name = "dinah"
version = "0.0.1"
description = ""
authors = ["StrayDragon <straydragonv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
djangorestframework = "^3.11.0"
django-environ = "^0.4.5"
django-crispy-forms = "^1.8.1"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.8"
django-allauth = "^0.41.0"
argon2-cffi = "^19.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
selenium = "^3.141.0"
flake8 = "^3.7.9"
yapf = "^0.29.0"
ipython = "^7.12.0"
ipdb = "^0.12.3"
mypy = "^0.761"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
