[tool.poetry]
name = "dinah"
version = "0.0.1"
description = "A funny blog built with Django, Vue and Vuetify"
authors = ["StrayDragon <straydragonv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
ipython = "^7.12.0"
ipdb = "^0.12.3"
mypy = "^0.761"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
